# Stack_Train_sorting

./: .gitignore  CMakeLists.txt  README.md
src/: Train.cpp  Train.h  TrainConsole.cpp  TrainConsole.h  TrainReader.cpp  TrainReader.h  Wagon.cpp  Wagon.h  dataTrain.txt  main.cpp
